[Java] Get rid of dynamic construction of bundle keys in VMOptionsParser
IDEA-359244

GitOrigin-RevId: 94ad691d4d6066d9d910eecf59b2af612f11e62a